tests/nested_type_member_name_conflict_bad.stderr
tests/nested_type_member_name_conflict_bad.sl:4:9: error: SL2001: duplicate definition 'value'
tests/nested_type_member_name_conflict_bad.sl:3:2: hint: SL2001: other declaration of 'value'
